payment methods section created

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 <body>
 
     <!-- HEADER -->
-    <header>
+    <div>
         <div class="header">
 
             <div id="header-row-01" class="flex w-100 justify-center space-x-2 pt-2">
@@ -47,12 +47,88 @@
 
         </div>
 
-    </header>
-
-    <!-- sub-header -->
-    <div class="sub-header">
+        <!-- sub-header -->
+        <div class="sub-header">
+            <object class="object w-full" data="/assets/pictures/sub-header.svg" type=""></object>
+        </div>
 
     </div>
+
+    <main>
+        
+        <!-- PAYMENT METHODS -->
+        <div id="payment-methods-section" class="w-full flex justify-between">
+
+            <!-- CREDIT CARD -->
+            <div class="flex px-4 py-2">
+                <div class="payment-icon">
+                    <object data="/assets/icons/credit-card.svg.svg" type=""></object>
+                </div>
+                <div class="flex flex-col">
+                    <div class="m-title">
+                        <span>Hasta 48 cuotas</span>
+                    </div>
+                    <div class="view-more-text">
+                        <span>Ver más</span>
+                    </div>
+
+                </div>
+            </div>
+
+            <!-- TRANSFER -->
+            <div class="flex px-4 py-2">
+                <div class="payment-icon">
+                    <object data="/assets/icons/transfer.svg.svg" type=""></object>
+                </div>
+                <div class="flex flex-col">
+                    <div class="m-title">
+                        <span>Transferencia desde tu banco</span>
+                    </div>
+                    <div class="view-more-text">
+                        <span>Ver más</span>
+                    </div>
+
+                </div>
+            </div>
+
+            <!-- CASH PAYMENT -->
+            <div class="flex px-4 py-2">
+                <div class="payment-icon">
+                    <object data="/assets/icons/payment-agreement.svg.svg" type=""></object>
+                </div>
+                <div class="flex flex-col py-2">
+                    <div class="m-title">
+                        <span>Transferencia desde tu banco</span>
+                    </div>
+                    <div class="view-more-text">
+                        <span>Ver más</span>
+                    </div>
+
+                </div>
+            </div>
+
+            <!-- OTHERS METHODS -->
+            <div class="flex px-4 py-2">
+                <div class="payment-icon">
+                    <object data="/assets/icons/view-more.svg.svg" type=""></object>
+                </div>
+                <div class="flex flex-col py-2">
+                    <div class="m-title">
+                        <span>Más medios de pago</span>
+                    </div>
+                    <div class="view-more-text">
+                        <span>Ver más</span>
+                    </div>
+
+                </div>
+            </div>
+
+
+        </div>
+
+
+
+    </main>
 
 </body>
 
