offers section was added

--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
     </div>
 
     <main>
-        
+
         <!-- PAYMENT METHODS -->
         <div id="payment-methods-section" class="w-full flex justify-between">
 
@@ -108,7 +108,7 @@
             </div>
 
             <!-- OTHERS METHODS -->
-            <div class="flex px-4 py-2">
+            <div class="flex px-4 py-2 separator-left">
                 <div class="payment-icon">
                     <object data="/assets/icons/view-more.svg.svg" type=""></object>
                 </div>
@@ -122,6 +122,129 @@
 
                 </div>
             </div>
+
+
+        </div>
+
+        <!-- OFFERS SECTION -->
+        <div id="offers-section" class="mt-4">
+
+            <!-- TITLE -->
+            <div class="space-x-2 mb-1">
+                <span class="title">Ofertas</span>
+                <span class="view-more">Ver todas</span>
+            </div>
+
+            <!-- ITEM LIST -->
+            <div class="flex space-x-2">
+
+                <!-- ITEM 01 -->
+                <div class="offer-item w-max">
+
+                    <div class="picture">
+                        <img src="/assets/pictures/offers/item_01.svg" alt="">
+                    </div>
+
+                    <div class="info">
+                        <div>
+                            <span class="price">$210.900</span>
+                            <span class="discount">32% OFF</span>
+                        </div>
+
+                        <div>
+                            <span class="free-shipping">Envío gratis</span>
+                        </div>
+
+                    </div>
+
+                </div>
+
+                <!-- ITEM 02 -->
+                <div class="offer-item w-max">
+
+                    <div class="picture">
+                        <img src="/assets/pictures/offers/item_02.svg" alt="">
+                    </div>
+
+                    <div class="info">
+                        <div>
+                            <span class="price">$210.900</span>
+                            <span class="discount">32% OFF</span>
+                        </div>
+
+                        <div>
+                            <span class="free-shipping">Envío gratis</span>
+                        </div>
+
+                    </div>
+
+                </div>
+
+                <!-- ITEM 03 -->
+                <div class="offer-item w-max">
+
+                    <div class="picture">
+                        <img src="/assets/pictures/offers/item_03.svg" alt="">
+                    </div>
+
+                    <div class="info">
+                        <div>
+                            <span class="price">$210.900</span>
+                            <span class="discount">32% OFF</span>
+                        </div>
+
+                        <div>
+                            <span class="free-shipping">Envío gratis</span>
+                        </div>
+
+                    </div>
+
+                </div>
+
+                <!-- ITEM 04 -->
+                <div class="offer-item w-max">
+
+                    <div class="picture">
+                        <img src="/assets/pictures/offers/item_04.svg" alt="">
+                    </div>
+
+                    <div class="info">
+                        <div>
+                            <span class="price">$210.900</span>
+                            <span class="discount">32% OFF</span>
+                        </div>
+
+                        <div>
+                            <span class="free-shipping">Envío gratis</span>
+                        </div>
+
+                    </div>
+
+                </div>
+
+                <!-- ITEM 05 -->
+                <div class="offer-item w-max">
+
+                    <div class="picture">
+                        <img src="/assets/pictures/offers/item_05.svg" alt="">
+                    </div>
+
+                    <div class="info">
+                        <div>
+                            <span class="price">$210.900</span>
+                            <span class="discount">32% OFF</span>
+                        </div>
+
+                        <div>
+                            <span class="free-shipping">Envío gratis</span>
+                        </div>
+
+                    </div>
+
+                </div>
+
+            </div>
+
 
 
         </div>
