--- a/index.html
+++ b/index.html
@@ -347,6 +347,68 @@
         </div>
 
 
+        <!-- COLLECTIONS - SUPERMARKET -->
+        <div id="collection-section" class="mt-8">
+
+            <div class="left-side-description">
+                <span class="title"> Colecciones: </span>
+                <span class="market"> Supermercado </span>
+            </div>
+
+            <div class="flex space-x-2 mt-2">
+
+                <div class="left-section">
+
+                    <div class="picture">
+                        <img src="assets/pictures/collections/main-left.svg" alt="">
+                    </div>
+
+                    <div class="description bg-white px-4">
+                        <div class="discover">DESCUBRE</div>
+                        <div class="super-market">SUPERMERCADO</div>
+                    </div>
+
+                </div>
+
+                <div class="flex flex-wrap secondary-items w-full">
+
+                    <div class="item">
+                        <img src="assets//pictures//collections/pic_01.svg" alt="">
+                    </div>
+
+                    <div class="item">
+                        <img src="assets//pictures//collections/pic_02.svg" alt="">
+                    </div>
+
+                    <div class="item">
+                        <img src="assets//pictures//collections/pic_03.svg" alt="">
+                    </div>
+
+                    <div class="item">
+                        <img src="assets//pictures//collections/pic_04.svg" alt="">
+                    </div>
+
+                    <div class="item">
+                        <img src="assets//pictures//collections/pic_05.svg" alt="">
+                    </div>
+
+                    <div class="item">
+                        <img src="assets//pictures//collections/pic_06.svg" alt="">
+                    </div>
+
+                    <div class="item">
+                        <img src="assets//pictures//collections/pic_07.svg" alt="">
+                    </div>
+
+                    <div class="item">
+                        <img src="assets//pictures//collections/pic_08.svg" alt="">
+                    </div>
+
+                </div>
+
+            </div>
+        </div>
+
         <!-- POPULAR CATEGORIES -->
         <div id="popular-categories-section" class="mt-8">
             
