store section was created

--- a/index.html
+++ b/index.html
@@ -346,6 +346,111 @@
 
         </div>
 
+        <!-- BEST STORES WAITING FOR YOU -->
+        <div id="stores-section">
+
+            <div class="title space-x-4 mt-6 mb-4">
+                <span class="title">Las mejores tiendas te esperan</span>
+                <span class="view-more">Ver tiendas</span>
+            </div>
+
+            <div class="item-list flex space-x-2">
+
+                <!-- ITEM 1 -->
+                <div class="item w-max pb-4 rounded-xl">
+                    <div class="item-header">
+                        <img class="rounded-t-lg" src="assets/pictures/stores/item_01_header.svg" alt="">                        
+                    </div>
+
+                    <div class="logo">
+                        <img src="assets/pictures/stores/item_01_logo.svg" alt="">
+                    </div>
+
+
+                    <div class="title text-center">Lego</div>
+                    <div class="items flex justify-center space-x-2 my-4 w-full">
+                        <img class="w-1/4" src="assets/pictures/stores/item_01_pic_01.svg" alt="">           
+                        <img class="w-1/4" src="assets/pictures/stores/item_01_pic_02.svg" alt="">           
+                        <img class="w-1/4" src="assets/pictures/stores/item_01_pic_03.svg" alt="">           
+                    </div>
+
+                    <div class="view-store text-center">
+                        Ver tienda
+                    </div>
+                </div>
+
+                <!-- ITEM 2 -->
+                <div class="item w-max pb-4 rounded-xl">
+                    <div class="item-header">
+                        <img class="rounded-t-lg" src="assets/pictures/stores/item_02_header.svg" alt="">                        
+                    </div>
+
+                    <div class="logo">
+                        <img src="assets/pictures/stores/item_02_logo.svg" alt="">
+                    </div>
+
+
+                    <div class="title text-center">Xiaomi</div>
+                    <div class="items flex justify-center space-x-2 my-4 w-full">
+                        <img class="w-1/4" src="assets/pictures/stores/item_02_pic_01.svg" alt="">           
+                        <img class="w-1/4" src="assets/pictures/stores/item_02_pic_02.svg" alt="">           
+                        <img class="w-1/4" src="assets/pictures/stores/item_02_pic_03.svg" alt="">           
+                    </div>
+
+                    <div class="view-store text-center">
+                        Ver tienda
+                    </div>
+                </div>
+
+                <!-- ITEM 3 -->
+                <div class="item w-max pb-4 rounded-xl">
+                    <div class="item-header">
+                        <img class="rounded-t-lg" src="assets/pictures/stores/item_03_header.svg" alt="">                        
+                    </div>
+
+                    <div class="logo">
+                        <img src="assets/pictures/stores/item_03_logo.svg" alt="">
+                    </div>
+
+
+                    <div class="title text-center">Oster</div>
+                    <div class="items flex justify-center space-x-2 my-4 w-full">
+                        <img class="w-1/4" src="assets/pictures/stores/item_03_pic_01.svg" alt="">           
+                        <img class="w-1/4" src="assets/pictures/stores/item_03_pic_02.svg" alt="">           
+                        <img class="w-1/4" src="assets/pictures/stores/item_03_pic_03.svg" alt="">           
+                    </div>
+
+                    <div class="view-store text-center">
+                        Ver tienda
+                    </div>
+                </div>
+
+                <!-- ITEM 4 -->
+                <div class="item w-max pb-4 rounded-xl">
+                    <div class="item-header">
+                        <img class="rounded-t-lg" src="assets/pictures/stores/item_04_header.svg" alt="">                        
+                    </div>
+
+                    <div class="logo">
+                        <img src="assets/pictures/stores/item_04_logo.svg" alt="">
+                    </div>
+
+
+                    <div class="title text-center">Oster</div>
+                    <div class="items flex justify-center space-x-2 my-4 w-full">
+                        <img class="w-1/4" src="assets/pictures/stores/item_04_pic_01.svg" alt="">           
+                        <img class="w-1/4" src="assets/pictures/stores/item_04_pic_02.svg" alt="">           
+                        <img class="w-1/4" src="assets/pictures/stores/item_04_pic_03.svg" alt="">           
+                    </div>
+
+                    <div class="view-store text-center">
+                        Ver tienda
+                    </div>
+                </div>
+
+            </div>
+        </div>
+
 
         <!-- COLLECTIONS - SUPERMARKET -->
         <div id="collection-section" class="mt-8">
