discover section created

--- a/index.html
+++ b/index.html
@@ -346,6 +346,61 @@
 
         </div>
 
+        <!-- DISCOVER SECTION -->
+        <div id="discover-section" class="mt-8">
+
+            <div class="title">
+                Descubre
+            </div>
+
+            <div class="item-list flex space-x-2 mt-4">
+
+                <!-- ITEM 1 -->
+                <div class="item rounded-lg flex">
+
+                    <div class="left flex flex-col justify-center px-4 py-4">
+                        <span class="small-text">RENUEVA TUS ESPACIOS</span>                        
+                        <span class="medium-text">HOGAR Y MUEBLES</span>
+                        <span class="medium-text">HASTA 50% OFF</span>
+
+                        <div class="flex px-12 py-4 justify-center">
+                            <div class="view-more text-center px-8 py-2">
+                                Ver más
+                            </div> 
+                        </div>
+
+                    </div>
+
+                    <div class="picture text-center rounded-xl">
+                        <img class="rounded-lg" src="assets/pictures/discover/pic_01.svg" alt="">                        
+                    </div>
+                </div>
+
+                <!-- ITEM 2 -->
+                <div class="item rounded-lg flex">
+
+                    <div class="left flex flex-col justify-center px-4">
+                        <span class="small-text">RENUEVA TUS ESPACIOS</span>                        
+                        <span class="medium-text">HOGAR Y MUEBLES</span>
+                        <span class="medium-text">HASTA 50% OFF</span>
+
+                        <div class="flex px-12 py-4 justify-center">
+                            <div class="view-more text-center px-8 py-2">
+                                Ver más
+                            </div> 
+                        </div>
+
+                    </div>
+
+                    <div class="picture text-center rounded-xl">
+                        <img class="rounded-lg" src="assets/pictures/discover/pic_01.svg" alt="">                        
+                    </div>
+                </div>
+
+            </div>
+
+        </div>
+
         <!-- BEST STORES WAITING FOR YOU -->
         <div id="stores-section">
 
