benefits section created

--- a/index.html
+++ b/index.html
@@ -346,6 +346,72 @@
 
         </div>
 
+        <!-- BENEFITS -->
+        <div id="market-benefits">
+
+            <div class="title space-x-4 mt-8 mb-4">
+                <span class="title-2">Beneficios de Mercado Puntos</span>
+                <span class="view-more">Ver todos los beneficios</span>
+            </div>
+
+            <div class="flex list-container space-x-2">
+
+                <!-- ITEM 1 -->
+                <div class="flex child item-01 w-1/3 items-end justify-center pt-8">
+
+                    <div class="flex content w-full px-4 space-x-4">
+                        <div class="flex left justify-center">
+                            <img src="assets/pictures/benefits/pic_01_logo.svg" alt="">
+                        </div>
+
+                        <div class="flex flex-col description py-2 mb-2">
+                            <span class="text-3">Sin cargo con el nivel 6</span>
+                            <span class="text-2">Disney+ y Star+</span>
+                        </div>
+
+                    </div>
+
+                </div>
+
+                <!-- ITEM 2 -->
+                <div class="flex child item-02 w-1/3 items-end justify-center pt-8">
+
+                    <div class="flex content w-full px-4 space-x-4">
+                        <div class="flex left justify-center">
+                            <img src="assets/pictures/benefits/pic_02_logo.svg" alt="">
+                        </div>
+
+                        <div class="flex flex-col description py-2 mb-2">
+                            <span class="text-xs">7 DÍAS GRATIS</span>
+                            <span class="text-3">Sin cargo con el nivel 6</span>
+                            <span class="text-2">Disney+ y Star+</span>
+                        </div>
+
+                    </div>
+
+                </div>
+
+                <!-- ITEM 3 -->
+                <div class="flex child item-03 w-1/3 items-end justify-center pt-8">
+
+                    <div class="flex content w-full px-4 space-x-4">
+                        <div class="flex left justify-center">
+                            <img src="assets/pictures/benefits/pic_03_logo.svg" alt="">
+                        </div>
+
+                        <div class="flex flex-col description py-2 mb-2">
+                            <span class="text-xs">7 DÍAS GRATIS</span>
+                            <span class="text-3">Sin cargo con el nivel 6</span>
+                            <span class="text-2">Disney+ y Star+</span>
+                        </div>
+
+                    </div>
+
+                </div>
+
+            </div>
+        </div>
+
         <!-- DISCOVER SECTION -->
         <div id="discover-section" class="mt-8">
 
@@ -505,7 +571,6 @@
 
             </div>
         </div>
-
 
         <!-- COLLECTIONS - SUPERMARKET -->
         <div id="collection-section" class="mt-8">
